# LiquidAI-cookbook

./: README.md
examples/telco-triage-ios/: .gitignore  MODELS.md  README.md  bootstrap-models.sh  project.yml
examples/telco-triage-ios/TelcoTriage/App/: RootView.swift  TelcoTriageApp.swift
examples/telco-triage-ios/TelcoTriage/Core/RAG/: RAGUnit.swift  (+1 more)
examples/telco-triage-ios/TelcoTriage/Features/: VerizonRAGTestView.swift
examples/telco-triage-ios/TelcoTriage/Resources/: knowledge-base.json  page-link-table-v1.json  probe-set-v1.json  rag-units-v1.json
examples/telco-triage-ios/TelcoTriageTests/: AnswerComposerTests.swift  BM25HierarchyRetrieverSwiftParityTests.swift  MultiTurnHeuristicsTests.swift  MultiTurnIntegrationTests.swift  VerizonDispatcherComposerPathTests.swift
examples/telco-triage-ios/hf/: README.md  model_manifest.json  prepare-hf-bundle.sh  upload-hf-bundle.sh
examples/voice-assistant/: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  intent.md  pyproject.toml
examples/voice-assistant/configs/: baseline.yaml  demo.yaml  finetuned-f16.yaml  finetuned-q4.yaml  finetuned-q8.yaml
examples/voice-assistant/docs/adr/: 0001-eval-methodology.md  0002-vendoring-strategy.md
examples/voice-assistant/docs/agents/: domain.md  issue-tracker.md  triage-labels.md
examples/voice-assistant/scripts/: _parser.py  _server.py  demo.py  eval.py  prepare_raw_data.py  preprocess_ohf_voice.py  quantize.py  smoke_test_pytorch.py  train.py
examples/voice-assistant/scripts/demo_static/: index.html
examples/voice-assistant/tests/: test_parser.py
(+71 files in other folders)
